tests/paczka1/fuzzy1/45010492.err
Error in line 5: BA8DG0b S320 60,2
Error in line 1: 7BI S276 98,6
Error in line 13: 7B A902 52,7
Error in line 8: oTPHkY S320 53,4
Error in line 20: oTPHkY S724 20,8
Error in line 25: oTPHkY A902 63,1
Error in line 34: BA8DG0b S320 56,5
